--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "next": "latest",
+    "next-sanity": "^0.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
